--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js --exec babel-node",
+    "start": "server.js --exec babel-node",
+    "dev": "nodemon server.js --exec babel-node --debug",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "connect-busboy": "0.0.2",
+    "debug-logger": "^0.4.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4"
   },
