--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "connect-busboy": "0.0.2",
-    "debug-logger": "^0.4.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-preset-es2015-node5": "^1.2.0",
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "winston": "^2.2.0"
   }
 }
