--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "flash",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "server.js --exec babel-node",
-    "dev": "nodemon server.js --exec babel-node --debug",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node server.js",
+    "dev": "nodemon server.js --exec babel-node --debug"
   },
   "repository": {
     "type": "git",
